PQ-69 Add user profile section