@@ -3,7 +3,6 @@ package com.play.quiz.controller;
 import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import com.play.quiz.exception.EmailSendFailedException;
 import com.play.quiz.exception.RecordNotFoundException;
@@ -80,6 +79,6 @@ public class ExceptionHandlingController {
         return fieldErrors.stream()
                 .filter(fieldError -> Objects.nonNull(fieldError.getDefaultMessage()))
                 .map(fieldError -> fieldError.getField() + " " + fieldError.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
